# cos3711-ass2-q2

./: CMakeLists.txt  Confectionary.cpp  Confectionary.h  ConfectionaryReadingMatFactory.h  MainWindow.cpp  MainWindow.h  MyMainWindow.cpp  MyMainWindow.h  README.md  ReadingMaterial.cpp  ReadingMaterial.h  Stock.h  StockDialog.cpp  StockDialog.h  StockFactory.h  main.cpp
